--- a/app/src/main/res/drawable/sender_shape.xml
+++ b/app/src/main/res/drawable/sender_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/purple_700"/>
+    <solid android:color="#0081F6"/>
     <corners  android:topRightRadius="8dp" android:topLeftRadius="8dp"
         android:bottomLeftRadius="8dp"/>
 
