--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main2"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/mainFragment">
     <fragment
         android:id="@+id/chatFragment"
-        android:name="com.ix.ibrahim7.socketio.ui.fragment.ChatFragment"
+        android:name="com.ix.ibrahim7.socketio.ui.fragment.chat.ChatFragment"
         android:label="Socket IO Chat App" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.ix.ibrahim7.socketio.ui.fragment.HomeFragment"
+        android:name="com.ix.ibrahim7.socketio.ui.fragment.home.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_chatFragment"
@@ -20,4 +20,9 @@
             app:popEnterAnim="@anim/slide_up"
             app:popExitAnim="@anim/slide_down" />
     </fragment>
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.ix.ibrahim7.socketio.MainFragment"
+        android:label="Socket.io"
+        tools:layout="@layout/fragment_main" />
 </navigation>
