--- a/app/src/main/res/layout/fragment_all_group.xml
+++ b/app/src/main/res/layout/fragment_all_group.xml
@@ -25,7 +25,7 @@
             android:id="@+id/empty_contanier"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
