add online and offline status

--- a/app/src/main/res/layout/item_sender_message.xml
+++ b/app/src/main/res/layout/item_sender_message.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="message"
-            type="com.ix.ibrahim7.socketio.model.TextMessage" />
+            type="com.ix.ibrahim7.socketio.model.Message" />
     </data>
 
     <RelativeLayout
