--- a/app/src/main/res/layout/dialog_create_group.xml
+++ b/app/src/main/res/layout/dialog_create_group.xml
@@ -37,10 +37,43 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:text="Create Group"
-                    android:textColor="@color/purple_700"
+                    android:textColor="@color/colorAccent"
                     android:textSize="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+
+                <RelativeLayout
+                    android:id="@+id/tv_choose"
+                    android:layout_width="0dp"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="16sp"
+                    android:background="@drawable/etxtt_shap"
+                    app:layout_constraintEnd_toEndOf="@+id/etxt_Group_name"
+                    app:layout_constraintStart_toStartOf="@+id/etxt_Group_name"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" >
+
+                    <ImageView
+                        android:id="@+id/tv_image_group"
+                        android:layout_width="160dp"
+                        android:layout_height="160dp"
+                        />
+
+                    <RelativeLayout
+                        android:id="@+id/choose_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_picture"
+                            app:tint="@color/colorAccent" />
+                    </RelativeLayout>
+
+
+                </RelativeLayout>
 
                 <EditText
                     android:id="@+id/etxt_Group_name"
@@ -50,7 +83,7 @@
                     android:background="@drawable/etxtt_shap"
                     android:hint="group name"
                     android:padding="12dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_choose"
                     tools:layout_editor_absoluteX="8dp" />
 
 
@@ -60,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Select User's"
-                    android:textColor="@color/purple_700"
+                    android:textColor="@color/colorAccent"
                     android:textSize="16dp"
                     app:layout_constraintStart_toStartOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/etxt_Group_name" />
@@ -83,7 +116,7 @@
                     android:layout_height="52dp"
                     android:text="Create Group"
                     android:background="@drawable/btn_shape"
-                    android:backgroundTint="#0081F6"
+                    android:backgroundTint="@color/colorAccent"
                     android:textColor="@android:color/white"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="32dp"
