--- a/app/src/main/res/layout/item_full_image.xml
+++ b/app/src/main/res/layout/item_full_image.xml
@@ -11,7 +11,7 @@
        android:id="@+id/full_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:src="@drawable/ic_image"
+       android:src="@drawable/ic_image1"
        android:scaleType="fitCenter"
        />
 
